# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./events";
 export * from "./opportunities";
 export * from "./board";
 export * from "./boosters";
+export * from "./boosterOfficers";
